--- a/src/app/dashboard/sidebar/sidebar.component.html
+++ b/src/app/dashboard/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
         <div class="options">
             <ng-content select=".side-nav"></ng-content>
             <span (click)="toggle()"
-                class="float-right d-sm-none d-block close">&times;</span>
+                class="float-right d-sm-none d-block close"><i class="fas fa-times"></i></span>
         </div>
     </mat-sidenav>
     <mat-sidenav-content>
