--- a/src/app/docs-sidebar/docs-sidebar.component.html
+++ b/src/app/docs-sidebar/docs-sidebar.component.html
@@ -17,7 +17,7 @@
 
                 <hr>
                 
-                <p class="category">Guilds <i class="fas fa-server"></i></p>
+                <p class="category">Servers <i class="fas fa-server"></i></p>
                 <a class="nav-link" 
                     routerLink="/docs/badges" routerLinkActive="active">Badges</a>
                 <a class="nav-link" 
@@ -26,8 +26,6 @@
                     routerLink="/docs/guidelines" routerLinkActive="active">Guidelines</a>
                 <a class="nav-link" 
                     routerLink="/docs/how-it-works" routerLinkActive="active">How It Works</a>
-                <a class="nav-link" 
-                    routerLink="/docs/post-stats" routerLinkActive="active">Post Stats</a>
                 <a class="nav-link" 
                     routerLink="/docs/widget" routerLinkActive="active">Widget</a>
 
