--- a/src/app/guilds/search-wrapper/search-wrapper.component.html
+++ b/src/app/guilds/search-wrapper/search-wrapper.component.html
@@ -25,7 +25,9 @@
                     <mat-chip>
                         <a href="#featured">Featured <i class="pl-1 fas fa-star"></i></a>
                     </mat-chip>
-                    <mat-chip class="more"><i class="fa fa-plus" aria-hidden="true"></i></mat-chip>
+                    <mat-chip class="more">
+                        <a href="#tags"><i class="fa fa-plus" aria-hidden="true"></i></a>
+                    </mat-chip>
                 </mat-chip-list>
             </div>
         </div>
@@ -46,20 +48,8 @@
                 <img class="rocket-4" src="assets\img\space\rocket2.svg" width="40px">
                 <img class="rocket-5" src="assets\img\space\rocket.svg" width="20px">
                 <img class="rocket-6" src="assets\img\space\rocket.svg" width="50px">
-                <img class="meteor meteor-1" src="assets\img\space\meteor1.png">
-                <img class="meteor meteor-1" src="assets\img\space\meteor1.png">
-                <img class="meteor meteor-1" src="assets\img\space\meteor1.png">
                 <img class="meteor meteor-1" src="assets\img\space\meteor2.png">
                 <img class="meteor meteor-2" src="assets\img\space\meteor2.png">
-                <img class="meteor meteor-2" src="assets\img\space\meteor3.png">
-                <img class="meteor meteor-2" src="assets\img\space\meteor3.png">
-                <img class="meteor meteor-2" src="assets\img\space\meteor3.png">
-                <img class="meteor meteor-2" src="assets\img\space\meteor3.png">
-                <img class="meteor meteor-3" src="assets\img\space\meteor3.png">
-                <img class="meteor meteor-3" src="assets\img\space\meteor3.png">
-                <img class="meteor meteor-2" src="assets\img\space\meteor3.png">
-                <img class="meteor meteor-3" src="assets\img\space\meteor3.png">
-                <img class="meteor meteor-3" src="assets\img\space\meteor3.png">
                 <img class="meteor meteor-3" src="assets\img\space\meteor3.png">
                 <img class="ufo" src="assets\img\space\ufo.png">
             </div>
@@ -86,7 +76,7 @@
                 
                 <hr class="mb-5">
         
-                <h2 class="pb-2"><i class="fas fa-hashtag"></i> Tags</h2>
+                <h2 id="tags" class="pb-2"><i class="fas fa-hashtag"></i> Tags</h2>
                 <mat-chip-list>
                     <mat-chip *ngFor="let tag of tagService.tags"
                         class="tag cursor-pointer"
