--- a/src/app/dashboard/guilds/add-guild/add-guild.component.html
+++ b/src/app/dashboard/guilds/add-guild/add-guild.component.html
@@ -3,12 +3,11 @@
     [loaded]="savedGuild && guild">
     <div [hidden]="preview" class="container">
         <div class="container">
-                <div class="d-flex justify-content-between">
-                    <h1 class="display-4">Edit {{ guild?.name }}</h1>
-                    <button id="previewButton" (click)="preview = true"
-                        class="rounded-lg mt-3" type="button" color="success" mat-button><i class="fas fa-binoculars"></i></button>
-                </div>
-            <hr>
+            <div class="d-flex justify-content-between mb-4">
+                <h1 class="display-4">Edit {{ guild?.name }}</h1>
+                <button id="previewButton" (click)="preview = true"
+                    class="rounded-lg mt-3" type="button" color="success" mat-button><i class="fas fa-binoculars"></i></button>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-6">
