--- a/src/app/guild-card/guild-card.component.html
+++ b/src/app/guild-card/guild-card.component.html
@@ -12,6 +12,9 @@
       <span class="badge badge-secondary cursor-pointer ml-1" matTooltip="Votes">
         <i class="fa fa-chevron-circle-up" aria-hidden="true"></i> {{ savedGuild.votes.length | number }}
       </span>
+      <span class="badge badge-secondary cursor-pointer ml-1" matTooltip="Members">
+        <i class="fa fa-users" aria-hidden="true"></i> {{ guild.memberCount | number }}
+      </span>
     </p>
     <div class="card-text d-flex flex-column justify-content-center">
       <h4 [routerLink]="['/servers/', guild.id]"
