--- a/src/app/guild-card/guild-card.component.html
+++ b/src/app/guild-card/guild-card.component.html
@@ -27,7 +27,7 @@
         class="bg-secondary rounded-lg" mat-button>
         <i class="fa fa-question" aria-hidden="true"></i>
       </button>
-      <a [href]="savedGuild.invite">
+      <a [href]="'https://discord.gg/' + savedGuild.invite">
         <button class="rounded-lg" color="success" mat-button>
           <i class="fa fa-plus" aria-hidden="true"></i>
         </button>
