--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -11,7 +11,7 @@
             <img class="object_mars" src="assets\img\space\mars.svg">
         </div>
         <div class="box_astronaut">
-            <img class="object_astronaut" src="assets\img\logo.png" width="140px">
+            <img class="object_astronaut" src="assets\img\icon.png" width="140px">
         </div>
     </div>
     <div class="glowing_stars">
