guild previews now update

--- a/src/app/dashboard/guilds/add-guild/add-guild.component.html
+++ b/src/app/dashboard/guilds/add-guild/add-guild.component.html
@@ -44,7 +44,7 @@
                         <rocket-button id="update"
                             [precondition]="form.valid"
                             (click)="update()"
-                            (animated)="navigateToGuildListing()">Update Guild</rocket-button>
+                            (animated)="navigateToGuildListing()">Update</rocket-button>
                     </div>
                 </form>
             </div>
