--- a/src/app/home-footer/home-footer.component.html
+++ b/src/app/home-footer/home-footer.component.html
@@ -3,17 +3,14 @@
     <div class="content d-flex flex-column justify-content-end pr-2">
         <span class="cursor-pointer"
             class="float-right row">
-            <div class="col-12">
-                <a class="float-right" href="https://dbots.co/bots/744931405665927260">
-                    <img src="https://dbots.co/api/bots/744931405665927260/widget?size=small" alt="DList Bot Widget" width="100" height="37.5">
-                </a>
-            </div>
             <span class="float-left col-6">&copy; 2020 DList</span>
             <div class="col-6">
                 <span class="float-right">
+                    <a href="https://dbots.co/bots/744931405665927260">View on DBots</a>
+                    <span class="text-muted px-1">|</span>
                     <a [href]="statusURL">Status</a>
                     <span class="text-muted px-1">|</span>
-                    <span class="cursor-pointer" routerLink="/docs/changelog" [fragment]="anchorVersion">{{ version }}</span>
+                    <span class="cursor-pointer" routerLink="/docs/changelog">{{ version }}</span>
                 </span>
             </div>
         </span>
