add dynamic searching

--- a/src/app/dashboard/guild-widget/guild-widget.component.html
+++ b/src/app/dashboard/guild-widget/guild-widget.component.html
@@ -24,6 +24,6 @@
     </div>
     <pre><code>&lt;a href="https://dlist.xyz/servers/{{ guild.id }}"&gt;
   &lt;img src="{{ widgetURL }}" alt="View on DList"&gt;
-&lt;a&gt;</code></pre>
+&lt;/a&gt;</code></pre>
   </div>
 </guild-sidebar>
