--- a/src/app/guilds/search-wrapper/space.scss
+++ b/src/app/guilds/search-wrapper/space.scss
@@ -1,9 +1,9 @@
 .stars {
-  z-index: 0;
   background: url(../../../assets/img/space/overlay_stars.svg);
 }
 
 .glowing_stars .star {
+  z-index: -2;
   position: absolute;
   border-radius: 100%;
   background-color: #fff;
@@ -127,7 +127,7 @@
 .rocket-1 {
   z-index: -1;
   position: absolute;
-  top: random(300) + vh;
+  top: percentage(random(80) / 100);
   left: 0px;
 
   pointer-events: none;
@@ -137,7 +137,7 @@
 .rocket-2 {
   z-index: -1;
   position: absolute;
-  top: random(300) + vh;
+  top: percentage(random(80) / 100);
   right: 0;
 
   pointer-events: none;
@@ -147,7 +147,7 @@
 .rocket-3 {
   z-index: -1;
   position: absolute;
-  top: random(300) + vh;
+  top: percentage(random(80) / 100);
   left: 0px;
 
   pointer-events: none;
@@ -157,6 +157,7 @@
 .rocket-4 {
   z-index: -1;
   position: absolute;
+  top: percentage(random(80) / 100);
   top: 65vh;
   left: 0px;
 
@@ -166,7 +167,7 @@
 .rocket-5 {
   z-index: -1;
   position: absolute;
-  top: random(300) + vh;
+  top: percentage(random(80) / 100);
   right: 0px;
 
   pointer-events: none;
@@ -176,7 +177,7 @@
 .rocket-6 {
   z-index: -1;
   position: absolute;
-  top: random(300) + vh;
+  top: percentage(random(80) / 100);
   right: 0px;
 
   pointer-events: none;
@@ -192,7 +193,7 @@
 .meteor-1 {
   z-index: -1;
   position: absolute;
-  top: random(300) + vh;
+  top: percentage(random(80) / 100);
   right: 0px;
 
   pointer-events: none;
@@ -202,7 +203,7 @@
 .meteor-2 {
   z-index: -1;
   position: absolute;
-  top: random(300) + vh;
+  top: percentage(random(80) / 100);
   right: 0px;
 
   pointer-events: none;
@@ -212,7 +213,7 @@
 .meteor-3 {
   z-index: -1;
   position: absolute;
-  top: random(300) + vh;
+  top: percentage(random(80) / 100);
   left: 0px;
 
   pointer-events: none;
