--- a/src/app/guild-card/guild-card.component.html
+++ b/src/app/guild-card/guild-card.component.html
@@ -22,15 +22,11 @@
         <p class="color-muted mb-1">{{ savedGuild.listing.overview }}</p>
         <p class="color-secondary">{{ cleanTags }}</p>
     </div>
-    <div class="d-flex justify-content-around mb-1">
+    <div class="d-flex justify-content-around mb-1 normal-font">
       <button [routerLink]="['/servers/' + guild.id]"
-        class="bg-secondary rounded-lg" mat-button>
-        <i class="fa fa-question" aria-hidden="true"></i>
-      </button>
+        class="bg-secondary rounded-lg uppercase" mat-button>View</button>
       <a [href]="'https://discord.gg/' + savedGuild.invite">
-        <button class="rounded-lg" color="success" mat-button>
-          <i class="fa fa-plus" aria-hidden="true"></i>
-        </button>
+        <button class="rounded-lg uppercase" color="success" mat-button>Add</button>
       </a>
     </div>
     <span class="text-center text-muted">{{ lastBumpTimestamp }}</span>
