ssr with flickering bug

--- a/src/app/dashboard/guild-widget/guild-widget.component.html
+++ b/src/app/dashboard/guild-widget/guild-widget.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="savedGuild && guild"
     class="container">
     <header>
-        <h1 class="display-4">{{ guild.name }} Widget</h1>
+      <h1 class="display-4">Widget</h1>
     </header>
     <div class="d-flex justify-content-center">
       <div>
