flickering glitch but releasing anyway

--- a/src/app/guild-card/guild-card.component.html
+++ b/src/app/guild-card/guild-card.component.html
@@ -26,7 +26,7 @@
       <button [routerLink]="['/servers/' + guild.id]"
         class="bg-secondary rounded-lg uppercase" mat-button>View</button>
       <a [href]="'https://discord.gg/' + savedGuild.invite">
-        <button class="rounded-lg uppercase" color="success" mat-button>Add</button>
+        <button class="rounded-lg uppercase" color="success" mat-button>Join</button>
       </a>
     </div>
     <span class="text-center text-muted">{{ lastBumpTimestamp }}</span>
